<resources>
    <string name="app_name">iLost</string>
    <string name="age">Age</string>
    <string name="edit">Edit</string>

    <string name="home">Home</string>
    <string name="message">Message</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="addaccount">Add Account</string>

    <string name="skip">Skip</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="delete">Delete</string>
    <string name="confirm_delete">Are you sure to delete?</string>
    <string name="no">No</string>
    <string name="edit_message">Edit Message</string>

    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="don_have_acc">Don\'t have account</string>

    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_out">Sign Out</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>

    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="com_password">Comfirm Password</string>
    <string name="user_name">Username</string>
    <string name="no_acc">No account? click to Sign Up</string>
    <string name="r_signup_with">Or Sign up via</string>
    <string name="have_acc">Already have account? click to Sign In</string>
    <string name="verify_code">Verification code</string>
    <string name="pls_type_verify_code">Please type the verification code sent to your phone.</string>
    <string name="not_receive_verify">Did not receive the code?</string>

    <!--facebook-->
    <string name="facebook_app_id">301185743748799</string>
    <string name="fb_login_protocol_scheme">fb301185743748799</string>
    <string name="please_wait">please wait</string>
    <string name="resend_code">Resend Code</string>
    <string name="log_with_phone">Phone Login</string>
    <string name="hint_phone_num">Phone Number</string>
    <string name="verify_note">By Login with phone number,
        you need to insert your phone number and then the verify code will send to your phone.</string>
    <string name="email_logo">email_logo</string>
    <string name="password_logo">password_logo</string>
    <string name="log_in_with_Mobile_Number">Log in with Mobile Number</string>

    <string name="change_profile_image">change_profile_image</string>
    <string name="msg_change_profile_image">msg_change_profile_image</string>
    <string name="gallery">gallery</string>
    <string name="camera">camera</string>


    <string name="chat">Chat</string>

    <string name="setting">Setting</string>


    <string name="date">Date</string>
    <string name="profile">Profile</string>


    <string name="signup">Sign Up</string>
    <string name="signin">Sign In </string>
    <string name="category">Category</string>
    <string name="From">From</string>
    <string name="location">Location</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="title_activity_profile">ProfileActivity</string>

    <!--setting-->
    <string name="user">User</string>
    <string name="hongdaly">Hong daly</string>
    <string name="save">Save</string>
    <string name="account">Account</string>
    <string name="language">Language</string>
    <string name="notification">Notification</string>
    <string name="logout">Log out</string>

    <string name="title_activity_settings">Settings</string>


    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>


    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="phone">Phone Number</string>


    <string name="pref_title_vibrate">Vibrate</string>
    <string name="action_settings">Setting</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>


    <string name="default_gallery_storage">My Videos</string>
    <string name="title_auto_upload">Auto upload</string>
    <string name="summary_upload_over_wifi">Upload the videos when wifi is available</string>
    <string name="title_upload_quality">Upload Quality</string>
    <string name="summary_upload_video_quality">Specify video quality for uploads</string>
    <string name="pref_title_notifications">Notifications</string>
    <string name="summary_choose_ringtone">Choose notification sound</string>
    <string name="pref_header_about">About</string>
    <string name="summary_about">We are a team of like-minded people, specialized in development of Android App Development creating new trends across the app space. Glad to Help in anyway!</string>
    <string name="app_version">3.5</string>
    <string name="summary_support">Got any queries? We are happy to help!</string>
    <string name="title_send_feedback">Send Feedback</string>
    <string name="title_faq">FAQ</string>
    <string name="summary_faq">View frequently asked questions</string>
    <string name="url_faq">https://www.androidhive.info/privacy-policy/</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="url_privacy">https://www.androidhive.info/privacy-policy/</string>
    <string name="title_terms">Terms &amp; Conditions</string>
    <string name="url_terms">https://www.androidhive.info/terms-of-service/</string>
    <string name="title_version">Version</string>
    <string name="choose_email_client">Choose email client</string>
    <string name="title_gallery_storage">Default Storage</string>
    <string name="title_new_notification_sound">New message notification</string>
    <string name="title_vibrate">Vibrate</string>
    <string name="summary_vibrate">Vibrate on new notification</string>
    <string name="key_upload_over_wifi">key_upload_over_wifi</string>
    <string name="key_gallery_name">key_gallery_name</string>
    <string name="key_upload_quality">key_upload_quality</string>
    <string name="notifications_new_message">notifications_new_message</string>
    <string name="key_notifications_new_message_ringtone">key_notifications_new_message_ringtone</string>
    <string name="key_vibrate">key_vibrate</string>
    <string name="key_send_feedback">key_send_feedback</string>
    <string name="updateprofile">UpdateProfile</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


</resources>
