<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLightGray">

    <LinearLayout
        android:id="@+id/sign_up_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ilost_logo" />

        <TextView
            android:id="@+id/sign_in_txt_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:text="@string/app_name"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/user_name"
            android:textColor="@color/colorPrimary" />

        <EditText
            android:id="@+id/sign_up_edt_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_name"
            android:inputType="text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/email"
            android:textColor="@color/colorPrimary" />

        <EditText
            android:id="@+id/sign_up_edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/password"
            android:textColor="@color/colorPrimary" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/sign_up_edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/app_name"
                android:src="@color/colorAccent"
                android:tint="@color/colorViolet" />

        </RelativeLayout>

        <Button
            android:id="@+id/sign_up_btn_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:text="@string/sign_up"
            android:backgroundTint="@color/colorViolet"
            android:textColor="#fff"
            tools:targetApi="lollipop" />

        <TextView
            android:id="@+id/sign_up_txt_goto_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:text="@string/have_acc"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary" />

    </LinearLayout>

</ScrollView>
