<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="kh.com.ilost.activities.PhoneSignupActivity">

    <!--Layout for user to input their phone number-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/phone_signup_verify_layout"
        android:orientation="vertical"
        android:background="@drawable/gradiennt1"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true">


        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:gravity="center"
            android:text="@string/log_in_with_Mobile_Number"
            android:textColor="#ffffff"
            android:textSize="22sp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="40dp"
                android:paddingEnd="40dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#ffffff"
                    android:text="@string/verify_note"
                    android:textSize="14sp"
                    android:id="@+id/firstText"
                    android:paddingTop="18dp"
                    android:layout_marginBottom="20dp"
                    />


                <com.rilixtech.CountryCodePicker
                    android:id="@+id/phone_signup_ccp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:ccp_defaultNameCode="KH"
                    app:ccp_showFullName="true"
                    android:layout_gravity="center"
                    android:padding="18dp"
                    app:ccp_textColor="#ffffff"
                    app:ccp_countryPreference="NG,GH,ZA,EG"
                    />


                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/phone_signup_phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_phone_num"
                    android:textColor="#ffffff"
                    android:gravity="center"
                    android:textColorHint="#ffffff"
                    android:background="@null"
                    android:inputType="phone"/>


                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/log_with_phone"
                    android:paddingEnd="16dp"
                    android:paddingStart="16dp"
                    android:background="@drawable/corner_white_border"
                    android:layout_gravity="center"
                    android:id="@+id/phone_signup_login_button"
                    android:textColor="#ffffff"
                    android:layout_marginTop="20dp"
                    />
            </LinearLayout>

        </ScrollView>

    </LinearLayout>

    <!--Layout for user to input their verify code-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/gradiennt1"
        android:id="@+id/phone_signup_input_code_layout"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:text="@string/verify_code"
            android:textSize="24sp"
            android:gravity="center"
            android:layout_marginTop="100dp"

            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:text="@string/pls_type_verify_code"
            android:gravity="center"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:textSize="14sp"
            android:paddingTop="18dp"
            android:layout_marginBottom="20dp"
            />
        <com.goodiebag.pinview.Pinview
            android:id="@+id/phone_signup_sms_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:pinWidth="30dp"
            app:pinHeight="30dp"
            app:pinLength="6"
            app:cursorVisible="false"
            app:forceKeyboard="false"
            app:hint="0"
            app:inputType="number"
            app:password="false"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:text="@string/not_receive_verify"
            android:gravity="center"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:textSize="12sp"
            android:paddingTop="18dp"
            android:layout_marginBottom="20dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:text="@string/please_wait"
                android:textSize="12sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#f5ea3d"
                android:id="@+id/phone_signup_timer"
                tools:text="0:30 "
                android:textSize="12sp"
                />
        </LinearLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resend_code"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:layout_marginTop="6dp"
            android:layout_gravity="center"
            android:id="@+id/phone_signup_resend_code"
            android:background="@drawable/corner_white_border"
            android:textSize="12sp"
            android:textColor="#ffffff"
            />
    </LinearLayout>

</RelativeLayout>
