<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp"
    tools:context=".activities.UpdateProfile">

    <!--<Button-->
        <!--android:id="@+id/btn_selectImg"-->
        <!--android:layout_width="160dp"-->
        <!--android:layout_height="160dp"-->
        <!--android:layout_centerHorizontal="true"-->
         <!--/>-->

     <ImageView
        android:id="@+id/iv"
        android:layout_width="160dp"
        android:layout_height="160dp"

        android:layout_centerHorizontal="true"
         android:src="@drawable/profile_edit"

         />

    <LinearLayout
        android:id="@+id/btn_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv"
        android:layout_margin="12dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edit_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:hint="@string/username" />

        <EditText
            android:id="@+id/edit_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:hint="@string/email" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_layout"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/save"
        android:textColor="@color/white" />

</RelativeLayout>