<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="4dp">

    <android.support.v7.widget.CardView
        android:id="@+id/vh_comment_card_img_profile"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:cardCornerRadius="15dp">

        <ImageView
            android:id="@+id/vh_comment_img_profile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/app_name" />

    </android.support.v7.widget.CardView>

    <LinearLayout
        android:id="@+id/vh_comment_layout_comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_toEndOf="@id/vh_comment_card_img_profile"
        android:background="@drawable/rectangle_light_green"
        android:orientation="vertical"
        android:padding="12dp">

        <TextView
            android:id="@+id/vh_comment_txt_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/user_name"
            android:textColor="@color/colorBlack"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/vh_comment_txt_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comment" />

    </LinearLayout>

    <TextView
        android:id="@+id/vh_comment_txt_timestamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/vh_comment_layout_comment"
        android:layout_marginStart="4dp"
        android:layout_toEndOf="@id/vh_comment_layout_comment"
        android:text="@string/date" />

</RelativeLayout>